# ESP32S3-DA

ina219_tester/: README.md  sdkconfig
ina219_tester/main/: CMakeLists.txt  main.c
motordc_closedloop/: .gitignore  README.md
motordc_closedloop/main/: CMakeLists.txt  encoder_da.c  encoder_da.h  main.c  mcpwm_da.c  mcpwm_da2.h
temp_closedloop/: README.md  partitions.csv  sdkconfig
temp_closedloop/main/: CMakeLists.txt  eth_da.c  main.c  mcpwm_da2.c  mcpwm_da2.h  pid_controller.c  pid_controller.h  telemetry_sender_task_2.c  telemetry_task.h  thermal_control.c  thermal_control.h
temp_mqtt2_/: .gitignore  README.md
temp_mqtt2_/components/enc28j60/: CMakeLists.txt
temp_mqtt2_/main/: CMakeLists.txt  eth_da.h  main.c  network_manager.c  network_manager.h  telemetry_sender_task_2.c  telemetry_task.h  thermal_sensors_da.c  thermal_sensors_da.h  wifi_da.c  wifi_da.h
